Project

General

Profile

Actions

Bug #47450

closed

stop parsing the error string in the session reject message

Added by Ilya Dryomov over 3 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Category:
fs/ceph
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Crash signature (v1):
Crash signature (v2):

Description

"error_string" in the metadata of MClientSession is for humans and shouldn't be part of the on-wire format.

Stop relying on it and do something more in line with what ceph-fuse does (i.e. add emit_blocklist_events() infrastructure to libceph and consume it from fs/ceph).

A simpler solution might be to add a new flag or error code to MClientSession.


Related issues 1 (0 open1 closed)

Copied to CephFS - Bug #52382: mds,client: add flag to MClientSession for reject reasonResolvedKotresh Hiremath Ravishankar

Actions
Actions #2

Updated by Patrick Donnelly over 3 years ago

  • Status changed from New to Triaged
  • Assignee set to Kotresh Hiremath Ravishankar
Actions #3

Updated by Patrick Donnelly over 2 years ago

  • Copied to Bug #52382: mds,client: add flag to MClientSession for reject reason added
Actions #4

Updated by Xiubo Li over 1 year ago

  • Status changed from Triaged to Resolved

Fixed in:

commit e1c9788cb39777e81ebfbf31ae80b4ec14eb6f6d
Author: Kotresh HR <khiremat@redhat.com>
Date:   Mon Sep 27 19:22:27 2021 +0530

    ceph: don't rely on error_string to validate blocklisted session.

    The "error_string" in the metadata of MClientSession is being
    parsed by kclient to validate whether the session is blocklisted.
    The "error_string" is for humans and shouldn't be relied on it.
    Hence added the flag to MClientsession to indicate the session
    is blocklisted.

    [ jlayton: minor formatting cleanup ]

    URL: https://tracker.ceph.com/issues/47450
    Signed-off-by: Kotresh HR <khiremat@redhat.com>
    Signed-off-by: Jeff Layton <jlayton@kernel.org>
    Signed-off-by: Ilya Dryomov <idryomov@gmail.com>
Actions

Also available in: Atom PDF